{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 52,
  "lineage": "93f53cc0-c756-5ba0-9f24-8d698420fcf6",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891612582051:loadbalancer/app/multi-az-vpc-dev-alb/644fbb6b489e545c",
            "arn_suffix": "app/multi-az-vpc-dev-alb/644fbb6b489e545c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "multi-az-vpc-dev-alb-69468450.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:891612582051:loadbalancer/app/multi-az-vpc-dev-alb/644fbb6b489e545c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "multi-az-vpc-dev-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-006c8ba866d6b774a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08160f8b963cee6dc"
              },
              {
                "subnet_id": "subnet-0c2c119a2d2cede8b"
              }
            ],
            "subnets": [
              "subnet-08160f8b963cee6dc",
              "subnet-0c2c119a2d2cede8b"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-alb",
              "Project": "multi-az-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-alb",
              "Project": "multi-az-vpc"
            },
            "vpc_id": "vpc-010af611eca6c8550",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891612582051:listener/app/multi-az-vpc-dev-alb/644fbb6b489e545c/b773908298bbd731",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891612582051:targetgroup/multi-az-vpc-dev-tg/4de6187a4b926905",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891612582051:listener/app/multi-az-vpc-dev-alb/644fbb6b489e545c/b773908298bbd731",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891612582051:loadbalancer/app/multi-az-vpc-dev-alb/644fbb6b489e545c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-http-listener",
              "Project": "multi-az-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-http-listener",
              "Project": "multi-az-vpc"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891612582051:targetgroup/multi-az-vpc-dev-tg/4de6187a4b926905",
            "arn_suffix": "targetgroup/multi-az-vpc-dev-tg/4de6187a4b926905",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891612582051:targetgroup/multi-az-vpc-dev-tg/4de6187a4b926905",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:891612582051:loadbalancer/app/multi-az-vpc-dev-alb/644fbb6b489e545c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "multi-az-vpc-dev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-tg",
              "Project": "multi-az-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-tg",
              "Project": "multi-az-vpc"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-010af611eca6c8550"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612582051:security-group/sg-006c8ba866d6b774a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006c8ba866d6b774a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "multi-az-vpc-dev-alb-20251015122948631600000002",
            "name_prefix": "multi-az-vpc-dev-alb-",
            "owner_id": "891612582051",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-alb-sg",
              "Project": "multi-az-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-alb-sg",
              "Project": "multi-az-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-010af611eca6c8550"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612582051:security-group/sg-064bad99095d44c7d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064bad99095d44c7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "multi-az-vpc-dev-instance-20251015122948634500000004",
            "name_prefix": "multi-az-vpc-dev-instance-",
            "owner_id": "891612582051",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-instance-sg",
              "Project": "multi-az-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-instance-sg",
              "Project": "multi-az-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-010af611eca6c8550"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612582051:security-group/sg-0d033a360b73ac2de",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d033a360b73ac2de",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "multi-az-vpc-dev-rds-20251015122948631900000003",
            "name_prefix": "multi-az-vpc-dev-rds-",
            "owner_id": "891612582051",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-rds-sg",
              "Project": "multi-az-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-rds-sg",
              "Project": "multi-az-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-010af611eca6c8550"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04bab4036288500c9",
            "arn": "arn:aws:ec2:us-east-1:891612582051:elastic-ip/eipalloc-04bab4036288500c9",
            "association_id": "eipassoc-088a6cc6b2b8c07a0",
            "domain": "vpc",
            "id": "eipalloc-04bab4036288500c9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-083105bdb1f1694e2",
            "private_dns": "ip-10-0-1-145.ec2.internal",
            "private_ip": "10.0.1.145",
            "public_dns": "ec2-44-215-99-156.compute-1.amazonaws.com",
            "public_ip": "44.215.99.156",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-nat-eip-1",
              "Project": "multi-az-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-nat-eip-1",
              "Project": "multi-az-vpc"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be9dd669bd672559",
            "arn": "arn:aws:ec2:us-east-1:891612582051:elastic-ip/eipalloc-0be9dd669bd672559",
            "association_id": "eipassoc-07d7b7b99133ea88e",
            "domain": "vpc",
            "id": "eipalloc-0be9dd669bd672559",
            "network_border_group": "us-east-1",
            "network_interface": "eni-084a7d7bf96a3ad46",
            "private_dns": "ip-10-0-2-132.ec2.internal",
            "private_ip": "10.0.2.132",
            "public_dns": "ec2-98-90-79-227.compute-1.amazonaws.com",
            "public_ip": "98.90.79.227",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-nat-eip-2",
              "Project": "multi-az-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-nat-eip-2",
              "Project": "multi-az-vpc"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612582051:internet-gateway/igw-0dc1299685cdba765",
            "id": "igw-0dc1299685cdba765",
            "owner_id": "891612582051",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-igw",
              "Project": "multi-az-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-igw",
              "Project": "multi-az-vpc"
            },
            "vpc_id": "vpc-010af611eca6c8550"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04bab4036288500c9",
            "association_id": "eipassoc-088a6cc6b2b8c07a0",
            "connectivity_type": "public",
            "id": "nat-01138f231b79b483b",
            "network_interface_id": "eni-083105bdb1f1694e2",
            "private_ip": "10.0.1.145",
            "public_ip": "44.215.99.156",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08160f8b963cee6dc",
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-nat-gw-1",
              "Project": "multi-az-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-nat-gw-1",
              "Project": "multi-az-vpc"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be9dd669bd672559",
            "association_id": "eipassoc-07d7b7b99133ea88e",
            "connectivity_type": "public",
            "id": "nat-0d6ed4b6fbb38e0f6",
            "network_interface_id": "eni-084a7d7bf96a3ad46",
            "private_ip": "10.0.2.132",
            "public_ip": "98.90.79.227",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c2c119a2d2cede8b",
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-nat-gw-2",
              "Project": "multi-az-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-nat-gw-2",
              "Project": "multi-az-vpc"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612582051:route-table/rtb-061b4f9afef3d664c",
            "id": "rtb-061b4f9afef3d664c",
            "owner_id": "891612582051",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01138f231b79b483b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-private-rt-1",
              "Project": "multi-az-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-private-rt-1",
              "Project": "multi-az-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-010af611eca6c8550"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612582051:route-table/rtb-0df6a88f180bc0ced",
            "id": "rtb-0df6a88f180bc0ced",
            "owner_id": "891612582051",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d6ed4b6fbb38e0f6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-private-rt-2",
              "Project": "multi-az-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-private-rt-2",
              "Project": "multi-az-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-010af611eca6c8550"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612582051:route-table/rtb-03cb3f71ec0f87bb9",
            "id": "rtb-03cb3f71ec0f87bb9",
            "owner_id": "891612582051",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc1299685cdba765",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-public-rt",
              "Project": "multi-az-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-public-rt",
              "Project": "multi-az-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-010af611eca6c8550"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab982b5af6bdffc5",
            "region": "us-east-1",
            "route_table_id": "rtb-061b4f9afef3d664c",
            "subnet_id": "subnet-0ff68d312969fca17"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04eb1c08156ae31ef",
            "region": "us-east-1",
            "route_table_id": "rtb-0df6a88f180bc0ced",
            "subnet_id": "subnet-01920710151dc9206"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077458b7d8e71c8d1",
            "region": "us-east-1",
            "route_table_id": "rtb-03cb3f71ec0f87bb9",
            "subnet_id": "subnet-08160f8b963cee6dc"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0556c35a027c43e00",
            "region": "us-east-1",
            "route_table_id": "rtb-03cb3f71ec0f87bb9",
            "subnet_id": "subnet-0c2c119a2d2cede8b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612582051:subnet/subnet-0ff68d312969fca17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff68d312969fca17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891612582051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-private-subnet-1",
              "Project": "multi-az-vpc",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-private-subnet-1",
              "Project": "multi-az-vpc",
              "Type": "Private"
            },
            "vpc_id": "vpc-010af611eca6c8550"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612582051:subnet/subnet-01920710151dc9206",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01920710151dc9206",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891612582051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-private-subnet-2",
              "Project": "multi-az-vpc",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-private-subnet-2",
              "Project": "multi-az-vpc",
              "Type": "Private"
            },
            "vpc_id": "vpc-010af611eca6c8550"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612582051:subnet/subnet-08160f8b963cee6dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08160f8b963cee6dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891612582051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-public-subnet-1",
              "Project": "multi-az-vpc",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-public-subnet-1",
              "Project": "multi-az-vpc",
              "Type": "Public"
            },
            "vpc_id": "vpc-010af611eca6c8550"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612582051:subnet/subnet-0c2c119a2d2cede8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2c119a2d2cede8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891612582051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-public-subnet-2",
              "Project": "multi-az-vpc",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-public-subnet-2",
              "Project": "multi-az-vpc",
              "Type": "Public"
            },
            "vpc_id": "vpc-010af611eca6c8550"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891612582051:vpc/vpc-010af611eca6c8550",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eab47e45aff3d8ee",
            "default_route_table_id": "rtb-00c56b05b2682dd59",
            "default_security_group_id": "sg-0eeb5f20543340f3f",
            "dhcp_options_id": "dopt-08ee3f0d23127c54f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010af611eca6c8550",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00c56b05b2682dd59",
            "owner_id": "891612582051",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-vpc",
              "Project": "multi-az-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "multi-az-vpc-dev-vpc",
              "Project": "multi-az-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}